drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- NSM announcement reply/error messages now relegated to debug
  builds only (stderr). (EXPERIMENTAL)


0.9.29  2023-01-25  A Winter'23 Release.

- Bumping copyright headers to the brand new year.


0.9.28  2022-12-29  An End-of-Year'22 Release.

- Mitigate NSM sending lots of dirty messages on SIGTERM signal.
- Although being deprecated to use, JACK Session support hopefuly
  fixed once again.


0.9.27  2022-10-04  An Early-Autumn'22 Release.

- Fixed MIDI Controller... modeless dialog (de)instantiation.
- Custom color/style themes applies only to main widget only.
- Fixed typos and updated some old MIDI GM2 Controller names.


0.9.26  2022-06-07  An End-of-Sping'22 Release.

- Added Qt::Svg module as required at build time.


0.9.25  2022-04-07  A Spring'22 Release.

- Added missing file code to desktop exec entry (standalone only).
- Main application icon is now presented in scalable format (SVG).
- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)
- Avoid issuing NSM dirty messages as much as possible.


0.9.24  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.
- Fixed deprecate warnings in preparation for Qt >= 6.2.


0.9.23  2021-07-07  An Early-Summer'21 Release.

- Add support for LV2 UI Windows platform (by AnClark, while
  on synthv1).
- Sustain/Damper/Hold (MIDI CC#64) and Sustenuto (MIDI CC#66)
  pedal controllers are now implemented.
- Have some tolerance for buffer-size changes.
- All builds default to Qt6 (Qt >= 6.1) where available.
- CMake is now the official build system.


0.9.22  2021-05-13  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.21  2021-03-16  An End-of-Winter'21 Release.

- Fixed an old lurker, causing slight differences to voice
  on-sets, due to a wrong initial LFO Volume ramping value.